Refactored 10day related files

--- a/data/SST10/SST10.properties
+++ b/data/SST10/SST10.properties
@@ -3,7 +3,7 @@
 Levels=0.011,0.011
 Heterogeneous=false
 TimeAttribute=time
-AbsolutePath=false
+AbsolutePath=true
 Name=SST10
 TypeName=SST10
 Caching=false
