--- a/data/TUR10/SST.properties
+++ b/data/TUR10/SST.properties
@@ -3,7 +3,7 @@
 Levels=0.011,0.011
 Heterogeneous=false
 TimeAttribute=time
-AbsolutePath=false
+AbsolutePath=true
 Name=SST
 TypeName=SST
 Caching=false
