--- a/data/SST30_gr/SST30.properties
+++ b/data/SST30_gr/SST30.properties
@@ -1,9 +1,9 @@
 #-Automagically created from GeoTools-
-#Wed Aug 03 12:41:21 CEST 2016
-Levels=0.011,0.011
-Heterogeneous=false
+#Tue Jun 27 09:01:27 UTC 2017
+Levels=0.01,0.01
+Heterogeneous=true
 TimeAttribute=time
-AbsolutePath=false
+AbsolutePath=true
 Name=SST30
 TypeName=SST30
 Caching=false
