--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./data:/root/stores
       - ./geoserver_data_dir:/opt/geoserver/data_dir
+      - ./shared_data/geoserver/setenv.sh:/usr/local/tomcat/bin/setenv.sh
       - ~/pkh111_EOSAI_MapServices/shared_data:/shared
 networks:
   default:
